resources/insights-prod/dev-mnm-sre/prometheus-am.route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  labels:
    app: prometheus-am
  name: prometheus-am
spec:
  host: prometheus-am-mnm-sre.5a9f.insights-dev.openshiftapps.com
  port:
    targetPort: proxy-port
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: prometheus-am
    weight: 100
  wildcardPolicy: None
